2011-05-04  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove defunct CVS specific synchronisation goals.
	Base (re)publication decisions on changing SHA1 hashes.

	* common/issue.log: Add SHA1 hashes to publication records.
	* mingw32/issue.log msys/issue.log: Likewise.

	* Makefile.comm.in (issue_key, sha1hash): New macros; define them.
	(%.xml.lzma): Adapt build commands to use them; make the output files
	self-synchronising to current publication state.
	(all-sync, all-sync-to-cvs, all-sync-offline): ...
	(all-sync-begin, all-sync-offline-begin, all-sync-to-cvs-begin): ...
	(all-sync-to-cvs-or-offline): Defunct goals; remove them.
	(all-sync, all-sync-to-cvs): Delete all residual references.
	(cvsroot, repository): Defunct macros; remove them.

	* Makefile.in (all-sync, all-sync-to-cvs, all-sync-offline): Defunct
	goals; remove them.

	* Makefile.sync.in: File no longer required; remove it.
	* configure.ac (AC_CONFIG_FILES): Adjust accordingly.
	(AC_INIT): Set package version as 1.0

2011-04-27  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish msys-perl.

	* msys/msys-perl.xml: Update to 5.8.8-1.
	* msys/issue.log: Updated accordingly.

2011-04-24  Cesar Strauss  <cestrauss@gmail.com>

	Update & publish msys-core.

	* msys/msys-core.xml: Update to 1.0.17-1.
	* msys/issue.log: Updated accordingly.

2011-04-23  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-zlib.

	* mingw32/mingw32-zlib.xml: Update to 1.2.5-1.
	* mingw32/issue.log: Updated accordingly.

2011-04-21  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 0.9.7-1.
	* msys/issue.log: Updated accordingly.

2011-03-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.2-alpha-3 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-03-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
