@@ -32,8 +32,8 @@
   b02dc7d1ec48f9e9de3e0d04ccc79f4529f7e60f 2010090600 mingw32-bzip2.xml
   07b4037fb26f3015890c27e07f6e292bba1c2dbb 2010090600 mingw32-cygutils.xml
   f22aef52f7062813148d3ea1f4477b7ee05f5f5a 2010052100 mingw32-expat.xml
-  27195c5e1d8c510104d2bc802452b94f842e27d9 2010083100 mingw32-gcc3.xml
-  375d70d2455d16e61be672a0555afabb5ed9a21e 2011011200 mingw32-gcc4.xml
+  9d1d9deeccee4fb04f2944e3cd5e7b85757308ce 2011050500 mingw32-gcc3.xml
+  bd82145739caba7007e5fda2cb9f61fca97d2b15 2011050500 mingw32-gcc4.xml
   ed67389f5a0499eddc5d715357a4893bb1cad92a 2010092500 mingw32-gdb.xml
   432e7e89cfc138836b6b39930d81c5d054882ea4 2010090600 mingw32-gendef.xml
   7244fccd3713760a3afda6b9e4908a9610a645b3 2010090600 mingw32-gettext.xml
