@@ -7,6 +7,7 @@
     <download-host uri="http://prdownloads.sourceforge.net/mingw/%F?download" />
 
     <package name="mingw32-gcc-v3-core" alias="gcc-v3 gcc-v3-core">
+      <affiliate group="MinGW Compiler Suite" />
       <description lang="en" title="The GNU C Compiler">
         <paragraph>
           This package is specific to Version 3 of the GNU Compiler
@@ -21,15 +22,16 @@
           for those users who continue the use GCC Version 3.
         </paragraph>
       </description>
-      <affiliate group="MinGW Compiler Suite" />
-      <requires ge="mingw32-binutils-*-mingw32-bin.tar" />
-      <requires ge="mingw32-mingwrt-*-mingw32-dev.tar" />
-      <requires ge="mingw32-mingwrt-*-mingw32-dll.tar" />
-      <requires ge="mingw32-w32api-*-mingw32-dev.tar" />
-      <release tarname="gcc-v3-core-3.4.5-20060117-3-mingw32-bin.tar.gz">
-        <source tarname="gcc-core-3.4.5-20060117-2-src.tar.gz" />
-        <download tarname="gcc-core-3.4.5-20060117-3.tar.gz" />
-      </release>
+      <component class="bin">
+        <requires ge="mingw32-binutils-*-mingw32-bin.tar" />
+        <requires ge="mingw32-mingwrt-*-mingw32-dev.tar" />
+        <requires ge="mingw32-mingwrt-*-mingw32-dll.tar" />
+        <requires ge="mingw32-w32api-*-mingw32-dev.tar" />
+        <release tarname="gcc-v3-core-3.4.5-20060117-3-mingw32-bin.tar.gz">
+          <source tarname="gcc-core-3.4.5-20060117-2-src.tar.gz" />
+          <download tarname="gcc-core-3.4.5-20060117-3.tar.gz" />
+        </release>
+      </component>
     </package>
 
     <package name="mingw32-gcc-v3-ada" alias="gcc-v3-ada">
@@ -45,14 +47,17 @@
           to compile programs written in the Ada language.
         </paragraph>
       </description>
-      <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
-      <release tarname="gcc-v3-ada-3.4.5-20060117-3-mingw32-bin.tar.gz">
-        <source tarname="gcc-ada-3.4.5-20060117-2-src.tar.gz" />
-        <download tarname="gcc-ada-3.4.5-20060117-3.tar.gz" />
-      </release>
+      <component class="bin">
+        <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-v3-ada-3.4.5-20060117-3-mingw32-bin.tar.gz">
+          <source tarname="gcc-ada-3.4.5-20060117-2-src.tar.gz" />
+          <download tarname="gcc-ada-3.4.5-20060117-3.tar.gz" />
+        </release>
+      </component>
     </package>
 
     <package name="mingw32-gcc-v3-g++" alias="gcc-v3-g++ gcc-v3-c++">
+      <affiliate group="MinGW Compiler Suite" />
       <description lang="en" title="The GNU C++ Compiler">
         <paragraph>
           This package provides the MinGW implementation of the
@@ -64,12 +69,13 @@
           to compile programs written in the C++ language.
         </paragraph>
       </description>
-      <affiliate group="MinGW Compiler Suite" />
-      <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
-      <release tarname="gcc-v3-g++-3.4.5-20060117-3-mingw32-bin.tar.gz">
-        <source tarname="gcc-g++-3.4.5-20060117-2-src.tar.gz" />
-        <download tarname="gcc-g++-3.4.5-20060117-3.tar.gz" />
-      </release>
+      <component class="bin">
+        <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-v3-g++-3.4.5-20060117-3-mingw32-bin.tar.gz">
+          <source tarname="gcc-g++-3.4.5-20060117-2-src.tar.gz" />
+          <download tarname="gcc-g++-3.4.5-20060117-3.tar.gz" />
+        </release>
+      </component>
     </package>
 
     <package name="mingw32-gcc-v3-fortran" alias="gcc-v3-fortran gcc-v3-g77 g77 f77">
@@ -85,11 +91,13 @@
           to compile programs written in the FORTRAN language.
         </paragraph>
       </description>
-      <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
-      <release tarname="gcc-v3-g77-3.4.5-20060117-3-mingw32-bin.tar.gz">
-        <source tarname="gcc-g77-3.4.5-20060117-2-src.tar.gz" />
-        <download tarname="gcc-g77-3.4.5-20060117-3.tar.gz" />
-      </release>
+      <component class="bin">
+        <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-v3-g77-3.4.5-20060117-3-mingw32-bin.tar.gz">
+          <source tarname="gcc-g77-3.4.5-20060117-2-src.tar.gz" />
+          <download tarname="gcc-g77-3.4.5-20060117-3.tar.gz" />
+        </release>
+      </component>
     </package>
 
     <package name="mingw32-gcc-v3-java" alias="gcc-v3-java">
@@ -105,11 +113,13 @@
           to compile programs written in the Java language.
         </paragraph>
       </description>
-      <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
-      <release tarname="gcc-v3-java-3.4.5-20060117-3-mingw32-bin.tar.gz">
-        <source tarname="gcc-java-3.4.5-20060117-2-src.tar.gz" />
-        <download tarname="gcc-java-3.4.5-20060117-3.tar.gz" />
-      </release>
+      <component class="bin">
+        <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-v3-java-3.4.5-20060117-3-mingw32-bin.tar.gz">
+          <source tarname="gcc-java-3.4.5-20060117-2-src.tar.gz" />
+          <download tarname="gcc-java-3.4.5-20060117-3.tar.gz" />
+        </release>
+      </component>
     </package>
 
     <package name="mingw32-gcc-v3-objc" alias="gcc-v3-objc">
@@ -125,11 +135,13 @@
           to compile programs written in the Objective-C language.
         </paragraph>
       </description>
-      <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
-      <release tarname="gcc-v3-objc-3.4.5-20060117-3-mingw32-bin.tar.gz">
-        <source tarname="gcc-objc-3.4.5-20060117-2-src.tar.gz" />
-        <download tarname="gcc-objc-3.4.5-20060117-3.tar.gz" />
-      </release>
+      <component class="bin">
+        <requires eq="mingw32-gcc-v3-core-%-mingw32-bin.tar" />
+        <release tarname="gcc-v3-objc-3.4.5-20060117-3-mingw32-bin.tar.gz">
+          <source tarname="gcc-objc-3.4.5-20060117-2-src.tar.gz" />
+          <download tarname="gcc-objc-3.4.5-20060117-3.tar.gz" />
+        </release>
+      </component>
     </package>
 
   </package-collection>
