@@ -1,3 +1,13 @@
+2011-05-04  Charles Wilson  <mingw@cwilson.fastmail.fm>
+
+	Ensure all (sub)packages have at least one explicit
+	<component /> element. Harmonizes 'mingw-get list' output.
+
+	* mingw32/mingw32-gcc3.xml: Ensure (sub) packages with
+	a single component use an explicit <component /> element.
+	* mingw32/mingw32-gcc4.xml: Ditto.
+	* mingw32/issue.log: Updated accordingly.
+
 2011-05-04  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Remove defunct CVS specific synchronisation goals.
